--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Layout from "../layouts/Layout.astro";
             <span
               class="animated-gradient text-center text-transparent bg-clip-text bg-gradient-to-r from-[#7b29ff] to-white"
             >
-              Bienvenido a Commette
+              Compañeros de XD
             </span>
           </h1>
           <div class="max-w-xl mx-auto text-center">
