updated demo website

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,31 +33,7 @@
 
       <div class="hidden md:flex md:items-center md:space-x-10">
         <a
-          href="/products"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Productos
-        </a>
-
-        <a
-          href="/testimonials"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Vendedores
-        </a>
-
-        <a
-          href="/contact"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Contáctanos
-        </a>
-
-        <a
-          href="/login"
+          href="#"
           class="bg-transparent hover:bg-purple-600 text-purple-600 font-semibold hover:text-white py-2 px-4 border border-purple-600 hover:border-transparent rounded"
         >
           Comenzar
@@ -65,40 +41,10 @@
       </div>
     </nav>
 
-    <nav
-      id="mobile-nav"
-      class="pb-10 text-center bg-black md:hidden"
-      hidden
-    >
-
-
+    <nav id="mobile-nav" class="pb-10 text-center bg-black md:hidden" hidden>
       <nav class="flex flex-col items-center mt-10 space-y-2">
         <a
-          href="/products"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Productos
-        </a>
-
-        <a
-          href="/testimonials"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Vendedores
-        </a>
-
-        <a
-          href="/contact"
-          title=""
-          class="text-sm font-medium text-white transition-all duration-200 lg:text-base hover:text-purple-600 focus:text-opacity-70"
-        >
-          Contáctanos
-        </a>
-
-        <a
-          href="/login"
+          href="#"
           class="bg-transparent hover:bg-purple-600 text-purple-600 font-semibold hover:text-white py-2 px-4 border border-purple-600 hover:border-transparent rounded"
         >
           Comenzar
@@ -110,7 +56,6 @@
 
 <script>
   const menuButton = document.getElementById("menu");
-  const closeButton = document.getElementById("close");
   const mobileNav = document.getElementById("mobile-nav");
 
   if (mobileNav) {
