--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const images = [
             <span
               class="animated-gradient text-center text-transparent bg-clip-text bg-gradient-to-r from-[#7b29ff] to-white"
             >
-              No es magia, es DevOps!
+              Commette
             </span>
           </h1>
           <div class="max-w-xl mx-auto text-center">
