--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,31 +6,31 @@ import ImageCarousel from "../layouts/ImageCarousel.astro";
 const images = [
   {
     src: "https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg",
-    alt: "Pizza",
+    alt: "picture1",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1565098772267-60af42b81ef2.jpg",
-    alt: "Pizza",
+    alt: "picture2",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1572635148818-ef6fd45eb394.jpg",
-    alt: "Pizza",
+    alt: "picture3",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1494253109108-2e30c049369b.jpg",
-    alt: "Pizza",
+    alt: "picture4",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1550258987-190a2d41a8ba.jpg",
-    alt: "Pizza",
+    alt: "picture5",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1559181567-c3190ca9959b.jpg",
-    alt: "Pizza",
+    alt: "picture6",
   },
   {
     src: "https://img.daisyui.com/images/stock/photo-1601004890684-d8cbf643f5f2.jpg",
-    alt: "Pizza",
+    alt: "picture7",
   },
 ];
 ---
