--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const images = [
 ];
 ---
 
-<Layout title="Comette">
+<Layout title="Comettxdd">
   <main>
     <div class="bg-gradient-to-b from-[#101212] relative to-[#1c0820]">
       <section
