--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,7 @@ import StatsCard from "../layouts/StatsCard.astro";
 import ImageCarousel from "../layouts/ImageCarousel.astro";
 
 const images = [
-  {
-    src: "https://img.daisyui.com/images/stock/photo-1559703248-dcaaec9fab78.jpg",
-    alt: "picture1",
-  },
+
   {
     src: "https://img.daisyui.com/images/stock/photo-1565098772267-60af42b81ef2.jpg",
     alt: "picture2",
@@ -46,7 +43,7 @@ const images = [
             <span
               class="animated-gradient text-center text-transparent bg-clip-text bg-gradient-to-r from-[#7b29ff] to-white"
             >
-              Commette
+             No es magia, es DevOps
             </span>
             </h1>
           <div class="max-w-xl mx-auto text-center">
